@@ -1,5 +1,14 @@
-#LightJason Tutorials
+# LightJason Tutorials
 
 working tutorials on Java 25
+
+
 LightJason: https://github.com/LightJason
+
 Tutorials: https://lightjason.org/tutorials/
+
+
+How to run the tutorials?
+  - open terminal
+  - run `mvn package`
+  - run the jar with JVM option `--add-opens java.base/java.util=ALL-UNNAMED`
